<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_assessoria"
        android:title="@string/txt_menu_assessoria"
        android:icon="@drawable/ic_assessoria"/>

    <item
        android:id="@+id/menu_noticia"
        android:title="@string/txt_menu_noticia"
        android:icon="@drawable/ic_noticia"/>

    <item
        android:id="@+id/menu_home"
        android:title="@string/txt_menu_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/menu_bolsa"
        android:title="@string/txt_menu_bolsa"
        android:icon="@drawable/ic_bolsa"/>

    <item
        android:id="@+id/menu_vitrine"
        android:title="@string/txt_menu_vitrine"
        android:icon="@drawable/ic_vitrine"/>

</menu>